--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "app",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.6.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
